--- a/LifeCycle/app/src/main/AndroidManifest.xml
+++ b/LifeCycle/app/src/main/AndroidManifest.xml
@@ -3,12 +3,16 @@
     package="com.example.lifecycle">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LifeCycle">
+        <activity android:name=".TransparentActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <activity android:name=".SubActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
